@@ -56,6 +56,7 @@ class FilePaths (Extension):
                                 "path varchar" +
                                 ")")
             except pysqlite2.dbapi2.OperationalError:
+                cursor.close ()
                 raise TableAlreadyExists
             except:
                 raise
@@ -71,6 +72,7 @@ class FilePaths (Extension):
                                 ") CHARACTER SET=utf8")
             except _mysql_exceptions.OperationalError, e:
                 if e.args[0] == 1050:
+                    cursor.close ()
                     raise TableAlreadyExists
                 raise
             except:
@@ -160,6 +162,7 @@ class FilePaths (Extension):
             rs = cursor.fetchmany ()
             
         cnn.commit ()
+        cursor.close ()
         cnn.close ()
 
 register_extension ("FilePaths", FilePaths)
